appId: com.brightwellpayments.android.internal
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
        id: "input_username"
    timeout: 50000
- tapOn:
    id: "input_username"
- inputText: "testwu9995"
- tapOn: "Log in"
- tapOn:
    id: "input_password"
- inputText: "Test1234!!"
- tapOn: "Log in"
- tapOn:
    id: "input_answer_text"
- inputText: "test"
- tapOn: "Continue"
- assertVisible:
    id: "availableBalanceText"







