appId: com.brightwellpayments.android.internal
---
- launchApp:
    clearState: true
- runFlow: "subflows/Login.yaml"
- tapOn:
    id: "action_support"
- assertVisible:
    id: "supportLandingMain"
- tapOn:
    id: "button_message"
- assertVisible: "How can we help you?"
- tapOn: "Something else"
- assertVisible: "Something else"
- tapOn: "I need to update my name"
- assertVisible: "Ticket already open"
- tapOn:
    id: "button1"
- tapOn:
    id: "chat_bottom_bar"
- inputText: "Update name"
- tapOn:
    id: "support_chat_send_button"
- hideKeyboard











